[gd_scene load_steps=9 format=3 uid="uid://bhx3sq7c25axr"]

[ext_resource type="Script" path="res://World.gd" id="1_2kb84"]
[ext_resource type="Texture2D" uid="uid://b07kfesw0xhuj" path="res://addons/kenney_particle_pack/circle_05.png" id="2_wqspe"]
[ext_resource type="PackedScene" uid="uid://dfvsgmmaalayo" path="res://environment.blend" id="3_aet4i"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_n36e3"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_3o00u"]
sky_material = SubResource("ProceduralSkyMaterial_n36e3")
process_mode = 1

[sub_resource type="Environment" id="Environment_ibbjd"]
background_mode = 2
sky = SubResource("Sky_3o00u")
tonemap_mode = 2
glow_enabled = true
fog_light_color = Color(0.517647, 0.552941, 0.607843, 1)
fog_density = 0.0257

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qr6a5"]
bg_color = Color(0.929412, 0, 0.164706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1lv5t"]
bg_color = Color(0.333333, 0.584314, 0, 1)

[node name="World" type="Node3D"]
script = ExtResource("1_2kb84")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ibbjd")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.181773, 0.983341, 0, -0.983341, -0.181773, 2.31913, 11.9622, -9.99897)
spot_range = 102.687
spot_angle = 61.36

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.4567, -7.56896)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 339.0
offset_top = 224.0
offset_right = -339.0
offset_bottom = -224.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Главное меню"
horizontal_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Создать игру"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Присоединиться"

[node name="Address" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Введите IP хоста"
alignment = 1

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.03)
pivot_offset = Vector2(576, 324)
texture = ExtResource("2_wqspe")
stretch_mode = 5

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 782.0
offset_top = 561.0
offset_right = -42.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_qr6a5")
theme_override_styles/fill = SubResource("StyleBoxFlat_1lv5t")
value = 100.0
show_percentage = false

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player/Player.tscn")
spawn_path = NodePath("..")

[node name="environment" parent="." instance=ExtResource("3_aet4i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.30138, 0)

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
